--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "dev": "live-server --watch=src --entry-file=src/index.html"
   },
-
   "author": "HomiG",
   "license": "ISC",
   "keywords": [
@@ -29,11 +29,10 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "live-server": "^1.2.2",
     "rollup": "^4.19.2",
     "ts-jest": "^29.2.4",
+    "tslib": "^2.6.3",
     "typescript": "^5.5.4"
-  },
-  "dependencies": {
-    "tslib": "^2.6.3"
   }
 }
