--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
+    "prettier": "prettier --write \"./**/*.{js,json}\"",
     "dev": "concurrently \"rollup -c -w\" \"live-server --watch=dist --entry-file=src/index.html\""
   },
   "author": "HomiG",
@@ -31,6 +32,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "live-server": "^1.2.2",
+    "prettier": "^3.3.3",
     "rollup": "^4.19.2",
     "ts-jest": "^29.2.4",
     "tslib": "^2.6.3",
